Fix scrollbar padding

--- a/node_js/material/layouts.css
+++ b/node_js/material/layouts.css
@@ -14,6 +14,8 @@ x-layout {
     width: 100%;
     display: block;
     background-color: var(--md-sys-color-surface);
+    min-height: var(--screen-height);
+    height: fit-content;
 }
 
 x-layout {
@@ -22,25 +24,25 @@ x-layout {
     justify-content: space-between;
     background-color: var(--md-sys-color-surface-container);
     min-height: calc(100% - 2 * var(--safe-area));
-    height: calc(100% - 2 * var(--safe-area));
+    height: fit-content;
     padding: var(--safe-area);
     --group-margin: max(var(--safe-area), 2%);
     --pane-border-radius: 26px;
     --rail-space: 100px;
     --top-space: 100px;
     /* default is rail */
-    width: calc(100% - 2 * var(--safe-area) - var(--rail-space) + 100vw - 100%);
+    width: calc(100vw - 2 * var(--safe-area) - var(--rail-space));
 }
 [dir=ltr] x-layout {
     padding-left: calc(var(--rail-space) + var(--safe-area));
-    padding-right: calc(var(--safe-area) - 100vw + 100%);
+    padding-right: calc(var(--safe-area) - (100vw - 100%));
 }
 [dir=rtl] x-layout {
     padding-right: calc(var(--rail-space) + var(--safe-area));
-    padding-left: calc(var(--safe-area) - 100vw + 100%);
+    padding-left: calc(var(--safe-area) - (100vw - 100%));
 }
 x-layout:not([has-rail]) {
-    width: calc(100% - 2 * var(--safe-area) + 100vw - 100%);
+    width: calc(100vw - 2 * var(--safe-area));
 }
 [dir=ltr] x-layout:not([has-rail]) {
     padding-left: var(--safe-area);
@@ -103,18 +105,18 @@ x-layout > [slot=nav-rail] {
         display: block;
     }
     x-layout {
-        width: calc(100% - 2 * var(--safe-area));
+        width: calc(100vw - 2 * var(--safe-area));
         padding-top: calc(var(--top-space) + var(--safe-area));
         /* ^^ THIS NEEDS TO BE FIXED!! ^^ */
         display: block;
     }
     [dir=ltr] x-layout {
-        padding-left: max(calc(var(--safe-area) - 100vw + 100%), var(--safe-area));
-        padding-right: calc(min(calc(100vw - 100% - var(--safe-area)), 0px) + var(--safe-area));
+        padding-left: var(--safe-area);
+        padding-right: calc(var(--safe-area) - (100vw - 100%));
     }
     [dir=rtl] x-layout {
-        padding-right: max(calc(var(--safe-area) - 100vw + 100%), var(--safe-area));
-        padding-left: calc(min(calc(100vw - 100% - var(--safe-area)), 0px) + var(--safe-area));
+        padding-right: var(--safe-area);
+        padding-left: calc(var(--safe-area) - (100vw - 100%));
     }
     x-layout:not([has-bar]) {
         padding-top: var(--safe-area);
@@ -155,15 +157,15 @@ x-layout > [slot=nav-rail] {
         display: block;
     }
     x-layout:not([group-count='1']):not([view=collapse]) {
-        width: calc(100% - 2 * var(--safe-area) + 100vw - 100%);
+        width: calc(100vw - 2 * var(--safe-area));
         padding-top: calc(var(--top-space) + var(--safe-area));
     }
     [dir=ltr] x-layout:not([group-count='1']):not([view=collapse]) {
-        padding-right: calc(var(--safe-area) - 100vw + 100%);
+        padding-right: calc(var(--safe-area) - (100vw - 100%));
         padding-left: var(--safe-area);
     }
-    [dir=ltr] x-layout:not([group-count='1']):not([view=collapse]) {
-        padding-left: calc(var(--safe-area) - 100vw + 100%);
+    [dir=rtl] x-layout:not([group-count='1']):not([view=collapse]) {
+        padding-left: calc(var(--safe-area) - (100vw - 100%));
         padding-right: var(--safe-area);
     }
     x-layout:not([group-count='1']):not([view=collapse]):not([has-bar]) {
