--- a/node_js/material/theme.css
+++ b/node_js/material/theme.css
@@ -24,7 +24,7 @@
 
 /* Style scrollbars */
 *::-webkit-scrollbar {
-    width: 17px;
+    width: 16px;
 }
 
 *::-webkit-scrollbar-track {
